# super_v

./: Cargo.toml  LICENSE  README copy.md  README.md  disable_service.sh  enable_service.sh  install.sh  uninstall.sh
assets/: super_v.desktop
src/: common.rs  history.rs  lib.rs  main copy.rs  main.rs  monitor.rs
src/gui/: clipboard_gui.rs  mod.rs  style.css
src/services/: clipboard_ipc_server.rs  clipboard_manager.rs  mod.rs  ydotool.rs
tests/: history_test.rs  ipc_test.rs  manager_test.rs  poller_test.rs
