[package]
name = "super_v"
authors = ["ecstranaut"]
description = "Super V clipboard manager"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
fs2 = "0.4.3"
iced = { version = "0.13.1", features = ["wgpu", "image", "auto-detect-theme", "fira-sans", "tiny-skia", "markdown", "iced_highlighter"] }
rdev = "0.5.3"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serial_test = "3.2.0"
