[package]
name = "super_v"
authors = ["ecstra"]
description = "Super V clipboard manager"
license = "MIT"
version = "1.0.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
emojis = "0.8.0"
fs2 = "0.4.3"
gtk4 = "0.10.2"
gdk-pixbuf = "0.21.2"
rdev = "0.5.3"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serial_test = "3.2.0"
